Fix scene hierarchy scrolling off screen

--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,7 @@ scene-panel {
     grid-column: 2; */
     flex: 25rem 0 0;
     max-width: 25rem;
+    overflow-y: scroll;
 }
 
 scene-panel-header {
